blockml/test/errors/07_model_sql_always_where/e145/e145_one.view
view: e145_one
table: 1
fields:
- dimension: dim5
  sql: 555
